<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="zh">
    <string name="app_name">面聊</string>
    <string name="version">版本号</string>
    <string name="check_for_update">检查更新</string>
    <string name="clip_board_clipped">内容已复制到剪帖版</string>
    <string name="field_no_info">无</string>
    <string name="delete">删除</string>
    <string name="create">创建</string>
    <string name="view">查看</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="contacts">通讯录 （%1$d人）</string>
    <string name="contacts_title">通讯录&#160;&#160;&#160;&#160;</string>
    <string name="high_chat_title">High群聊</string>
    <string name="high_chat">嗨群聊</string>
    <string name="high_open_time">每晚10：00开放</string>
    <string name="access">进入</string>
    <string name="high_chat_theme_no_entrance">只能进入一个话题</string>
    <string name="loading">读取中…</string>
    <string name="storage_not_available">存储卡不可用</string>
    <string name="crop_image">剪裁图片</string>
    <string name="user_agreement">面聊使用协议</string>
    <string name="change_log">更新日志</string>
    <string name="help">使用帮助</string>
    <string name="invite_friends">邀请朋友</string>
    <string name="invite_friends_desc">您的好友邀请您使用面聊，点击地址下载: </string>
    <string name="please_choose">请选择</string>
    <string name="handling_last_task">正在处理上一条任务</string>
    <string name="reply">回复</string>
    <string name="like">点赞</string>
    <string name="liked">已赞</string>
    <string name="cancel_like">取消赞</string>
    <string name="ms_failure_template">%1$s (%2$s)</string>
    <string name="choose_local_picture">选择本地图片</string>
    <string name="take_a_photo">拍照</string>
    <string name="question_mark">？</string>
    <string name="finish">完成</string>
    <string name="set_avatar">设置头像</string>
    <string name="set_scene_image">设置背景</string>
    <string name="confirm">请确认</string>
    <string name="invite">邀请</string>
    <string name="check_all">全选</string>
    <string name="uncheck_all">取消全选</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="post">发表</string>
    <string name="back">返回</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="field_tbd">待定</string>
    <string name="report">举报</string>
    <string name="ref_friends">"@好友"</string>
    <string name="map">地图</string>
    <string name="show_location">查看位置</string>
    <string name="field_required">必填</string>
    <string name="manage">订阅</string>
    <string name="send">发送</string>
    <string name="voice_message">[语音]</string>
    <string name="picture_message">[图片]</string>
    <string name="location_message">[位置]</string>
    <string name="share_location_message">[共享位置]</string>
    <string name="share_location_over">[位置共享结束]</string>
    <string name="share_location_no_result">抱歉，未查询到结果</string>
    <string name="add_friends_to_group">发起群聊</string>
    <string name="add_friends">添加朋友</string>
    <string name="group_chat_title">讨论组</string>
    <string name="get_members_info_failed">群成员信息获取失败</string>
    <string name="group_chat_info_title">聊天信息</string>
    <string name="group_chat_start_message">我发起了群聊</string>
    <string name="group_chat_not_support">对不起，该功能尚不支持群聊！</string>
    <string name="group_chat_toast_text">功能开发中，敬请期待!</string>
    <string name="group_chat_delete_chatrecord_success">聊天记录删除成功</string>
    <string name="update_gorup_name">修改群聊名称</string>
    <string name="update_my_nickname">我在本群的昵称</string>
    <string name="chose_report_reason">选择举报原因</string>
    <string name="chose_report_reason_toast">请选择一项举报内容</string>
    <string name="report_success_toast">举报成功</string>
    <string name="report_failed_toast">举报失败</string>
    <string name="third_party_login">第三方登录</string>
    <string name="login_loading_txt">登录中……</string>
    <string name="other_party_login">/其他方式登录/</string>
    <string name="chat_loading_voice">对方正在录音中……</string>
    <string name="chat_loading_txt">对方正在输入中……</string>
    <string name="splash_skip">跳过</string>
    <string name="fast_menu_choose_info">+号快捷功能显示</string>
    <string name="fast_menu_choose_count">(%1$d/4)</string>
    <string name="more_music">更多音乐:</string>
    <string name="tv_more_music">更多音乐</string>
    <string name="Group_management">群聊管理</string>
    <string name="campus">校内</string>
    <string name="ml_version_desc">面聊v%1$s版</string>
    <string name="In_the_download">下载中，请稍候</string>
    <string name="mianliao_ad">广告</string>
    <string name="connection_error">网络连接错误，请检查您的网络设置！</string>
    <string name="cannot_gain_qupai">插件没有初始化，无法获取趣拍服务</string>
    <string name="init_success">初始化成功</string>
    <string name="faster_setting">快捷设置</string>
    <string name="you_can_choose_up_to_4">您最多可以选择4个!</string>
    <string name="warm_reminder_to_remind">暖暖备忘帖提醒</string>
    <string name="do_you_have_a_task_didnot_finish">您还有一项任务没完成哦!</string>
    <string name="ad">广告%1$d</string>
    <string name="group_chat_manager">群聊管理</string>
    <string name="congralation_get">恭喜获得</string>
    <string name="rightnow_choose">当前选择</string>
    <string name="gold_count">50金币</string>
    <string name="run_time">5s</string>
    <string name="sorry_to_say">很遗憾的告诉你，</string>
    <string name="choose_side">你已选择了另一边，</string>
    <string name="tomorrom_night">明晚记得先来我这儿哦</string>
    <string name="you_sure">确定</string>
    <string name="set_image">设为头像</string>
    <string name="see_page">共325个人看过你的主页</string>
    <string name="load_more">加载更多</string>
    <string name="is_showing">正在展示</string>
    <string name="not_show">未展示</string>
    <string name="main_page_show">(可通过管理勋章重新添加到主页展示)</string>
    <string name="school_post">校内发帖</string>
    <string name="value_experience">经验值</string>
    <string name="value_count">麦粒</string>
    <string name="value_grade">等级:</string>
    <string name="is_first">初出茅庐</string>
    <string name="unlock_school">已解锁</string>
    <string name="unlock_school_num">所高校</string>
    <string name="have_see">去看看</string>
    <string name="have_ok">好的</string>
    <string name="up_count">共300人赞了我的帖子</string>
    <string name="base_information">基本信息</string>
    <string name="is_school">学校</string>
    <string name="is_marge">专业</string>
    <string name="is_finished">毕业时间</string>
    <string name="my_shine">我的亮点</string>
    <string name="all_serach">大家都在搜</string>
    <string name="is_sign">已连续签到1天</string>
    <string name="day_task">每日任务</string>
    <string name="newbie_task">新手任务</string>
    <string name="open_lock">漫游高校解锁任务</string>
    <string name="zero_zero">00:00</string>
    <string name="all_view">全屏</string>
    <string name="has_run">缓冲中...</string>
    <string name="add_image">添加图片</string>
    <string name="has_see">明白了</string>
    <string name="rule_hang">漫游规则</string>
    <string name="ten_oclck">10:00</string>
    <string name="new_text">新的备忘帖</string>
    <string name="new_time">time</string>
    <string name="my_value">我的麦粒</string>
    <string name="my_coin">我的金币</string>
    <string name="no_speak">禁言</string>
    <string name="cancel_no_speak">取消禁言</string>
    <string name="no_speak_toast">对不起，您已被禁言!</string>
    <string name="day_data">2015年08月26日</string>
    <string name="is_number">42</string>
    <string name="is_week">WEEK</string>
    <string name="is_hot">25℃~30℃</string>
    <string name="is_rain">阵雨</string>
    <string name="is_nooreder">&#27491;&#22312;&#20026;&#24744;&#21305;&#37197;&#32844;&#20301;</string>
    <string name="is_two_noorder">&#24050;&#20026;&#24744;&#21305;&#37197;&#21040;1&#20010;&#32844;&#20301;</string>
    <string name="is_three_noorder">&#32844;       &#20301;</string>
    <string name="is_four_noorder">&#20844;       &#21496;</string>
    <string name="is_five_noorder">&#25307;&#32856;&#26102;&#38388;</string>
    <string name="is_map">Mood&amp;Feeling</string>
    <string name="data_one_month">01-23</string>
    <string name="is_entry">进入</string>
    <string name="done_unlock">(完成以下任务解锁)</string>
    <string name="has_gain_good">获得赞赏数：</string>
    <string name="has_up_num">贡献UP值：</string>
    <string name="text_number_dd">256</string>
    <string name="hot_topic_upon">热门话题</string>
    <string name="create_text_new">创建帖子</string>
    <string name="action_vote">发起投票</string>
    <string name="my_wealth">我的财富</string>
    <string name="change_skin">个性换肤</string>
    <string name="game_center">游戏中心</string>
    <string name="mianliao_tool">面聊工具</string>
    <string name="main_more">更多</string>
    <string name="login_chat_server_succ">登录聊天服务器成功！</string>
    <string name="login_chat_server_fail">登录聊天服务器失败！</string>
    <string name="live_address">rtmp://%1$s/live/%2$s</string>
    <string name="my_income">我的直播收益</string>
    <string name="app_channel_wandoujia">豌豆荚</string>
    <string name="app_channel_yingyongbao">应用宝</string>
    <string name="app_channel_yingyonghui">应用汇</string>
    <string name="app_channel_baidu">百度</string>
    <string name="app_channel_xiaomi">小米</string>
    <string name="app_channel_meizu">魅族</string>
    <string name="app_channel_360">360</string>
    <string name="app_channel_tjut">泰聚泰</string>
    <string name="app_channel_sina">新浪微博</string>
    <string name="app_channel_huawei">华为</string>
    <string name="um_titile_desc">有重大版本更新啦！</string>
    <string name="um_update_top_desc">面聊后续会努力为童鞋们获取更多便捷服务哒</string>
    <string name="um_positive_btn">去更新嘞!</string>
    <string name="um_negative_btn">我稍后去更新!</string>
    <string name="dia_title">更多精彩，敬请期待</string>
    <string name="dia_text">面聊菌后续会努力为童鞋们获取更多便捷服务哒 o(*￣▽￣*)ブ </string>
    <string name="dia_button">知道啦!</string>
    <string name="lgi_success_submit">提交成功！</string>
    <string name="lgi_prompt_mess">稍后你将会收到一封邮件，请根据邮件内提示重置密码。</string>
    <string name="lgi_to_email">转到邮箱</string>
    <string name="course_classroom_head">教室</string>
    <string name="course_period_head">节数</string>
    <string name="course_weeks_head">周数</string>
    <string name="course_choose_weeks">请选择周数</string>
    <string name="course_choose_periods">请选择节数</string>
    <string name="course_delete_period">删除</string>
    <string name="course_input_classroom">请输入教室</string>
    <string name="prof_email">邮箱</string>
    <string name="reg_education_back">学历</string>
    <string name="reg_school">学校</string>
    <string name="reg_department">学院</string>
    <string name="reg_start_year">入学年份</string>
    <string name="reg_login_mlname">ML 号</string>
    <string name="reg_login_name_hint">请输入登录账号</string>
    <string name="reg_email_hint">请输入邮箱用于找回密码</string>
    <string name="fpwd_submit">提交</string>
    <string name="fpwd_contact_us">联系我们: </string>
    <string name="fe_feature">特色</string>
    <string name="fe_feature_hint">请用一句话描述</string>
    <string name="fe_location">地点</string>
    <string name="fe_location_hint">活动地点</string>
    <string name="fe_start_at">开始时间</string>
    <string name="fe_reg_deadline">报名截止</string>
    <string name="fe_contact">联系方式</string>
    <string name="fe_contact_hint">联系方式</string>
    <string name="fe_quota">人数限制</string>
    <string name="fe_quota_hint">0或不填表示不限制</string>
    <string name="fe_cost">费用</string>
    <string name="fe_cost_hint">活动花费</string>
    <string name="bty_rating_desc">请评价对方：</string>
    <string name="bty_rating_hint">您的描述能帮助到更多的人</string>
    <string name="bty_rating_submit">确认评价</string>
    <string name="bty_rating_good">好评</string>
    <string name="bty_rating_normal">中评</string>
    <string name="bty_rating_bad">差评</string>
    <string name="emo_recharge_pay_way">选择支付方式</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_confirm">确认支付</string>
    <string name="pay_money_by_unionpay">银联支付</string>
    <string name="pay_money_unionpay">储蓄卡、信用卡</string>
</resources>