<com.tjut.mianliao.black.MagicLinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical" android:padding="10dp">

    <com.tjut.mianliao.black.MagicLinearLayout android:background="@drawable/bg_card" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">

        <com.tjut.mianliao.component.CardItemBase app:cardTitle="@string/reg_login_mlname" android:layout_height="wrap_content" android:layout_width="match_parent">

            <EditText style="@style/MianLiao.EditText.InCard" android:hint="@string/reg_login_name_hint" android:id="@+id/et_login_name" android:layout_height="wrap_content" android:layout_marginTop="1px" android:layout_width="match_parent" android:maxLength="32" android:maxLines="1" android:singleLine="true" />
        </com.tjut.mianliao.component.CardItemBase>

        <include layout="@layout/hr_divider_with_margin" />

        <com.tjut.mianliao.component.CardItemBase app:cardTitle="@string/prof_email" android:layout_height="wrap_content" android:layout_width="match_parent">

            <EditText style="@style/MianLiao.EditText.InCard" android:hint="@string/reg_email_hint" android:id="@+id/et_email" android:inputType="textEmailAddress" android:layout_height="wrap_content" android:layout_marginTop="1px" android:layout_width="match_parent" android:maxLength="140" android:maxLines="1" android:singleLine="true" />
        </com.tjut.mianliao.component.CardItemBase>
    </com.tjut.mianliao.black.MagicLinearLayout>

    <Button android:background="@drawable/selector_btn_blue" android:id="@+id/btn_submit" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_width="match_parent" android:onClick="onClick" android:text="@string/fpwd_submit" />

    <com.tjut.mianliao.theme.ThemeTextView android:id="@+id/tv_info" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_width="wrap_content" android:textColor="@color/txt_color_red" />

    <com.tjut.mianliao.black.MagicLinearLayout android:gravity="bottom" android:layout_gravity="center_horizontal" android:layout_height="0dp" android:layout_weight="1" android:layout_width="wrap_content" android:paddingBottom="10dp">

        <com.tjut.mianliao.theme.ThemeTextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/fpwd_contact_us" android:textColor="#C1B9A8" android:textSize="16sp" />

        <com.tjut.mianliao.theme.ThemeTextView android:clickable="true" android:id="@+id/tv_contact_us" android:layout_height="wrap_content" android:layout_width="wrap_content" android:onClick="onClick" android:text="@string/service_email_underline" android:textColor="#34CED9" android:textSize="16sp" />
    </com.tjut.mianliao.black.MagicLinearLayout>

</com.tjut.mianliao.black.MagicLinearLayout>